objects/Sellable_Item_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>APNNumber__c</fullName>
        <formula>Sellable_Item_Product__r.APN_Number__c</formula>
        <label>APN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_Used__c</fullName>
        <label>Conversion Rate Used</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Configuration</label>
        <referenceTo>Currency_Configuration__c</referenceTo>
        <relationshipName>Selleable_Item_Pricings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Price__c</fullName>
        <label>Current Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiplier_Used__c</fullName>
        <label>Multiplier Used</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Price__c</fullName>
        <label>Previous Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <label>Price Book</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Pricing_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>G5_NA_USD</fullName>
                </value>
                <value>
                    <fullName>G5_NA_CAD</fullName>
                </value>
                <value>
                    <fullName>G2_CALA_USD</fullName>
                </value>
                <value>
                    <fullName>G3_EMEA_USD</fullName>
                </value>
                <value>
                    <fullName>G3_EMEA_EUR</fullName>
                </value>
                <value>
                    <fullName>G1_APAC_USD</fullName>
                </value>
                <value>
                    <fullName>G1_APAC_AUD</fullName>
                </value>
                <value>
                    <fullName>G4_JAPAN_JPY</fullName>
                </value>
                <value>
                    <fullName>NG5_NA_USD</fullName>
                </value>
                <value>
                    <fullName>NG5_NA_CAD</fullName>
                </value>
                <value>
                    <fullName>NG5_CALA_USD</fullName>
                </value>
                <value>
                    <fullName>NG2_BRAZIL_BRL</fullName>
                </value>
                <value>
                    <fullName>NG3_EUROPE_USD</fullName>
                </value>
                <value>
                    <fullName>NG3_EUROPE_EUR</fullName>
                </value>
                <value>
                    <fullName>NG3_EUROPE_GBP</fullName>
                </value>
                <value>
                    <fullName>NG1_APAC_USD</fullName>
                </value>
                <value>
                    <fullName>NG1_APAC_ANZ_AUD</fullName>
                </value>
                <value>
                    <fullName>NG4_APAC_JAPAN_YEN</fullName>
                </value>
                <value>
                    <fullName>NG1_APAC_KOREA_SE-ASIA_USD</fullName>
                </value>
                <value>
                    <fullName>NG4_APAC_CHINA_INDIA_USD</fullName>
                </value>
                <value>
                    <fullName>G3_EMEA_GBP</fullName>
                </value>
                <value>
                    <fullName>NG1_PPU_USD</fullName>
                </value>
                <value>
                    <fullName>NG1_PPU_GOLD_USD</fullName>
                </value>
                <value>
                    <fullName>NG1_PPU_SILVER_USD</fullName>
                </value>
                <value>
                    <fullName>NG5_NZD</fullName>
                </value>
                <value>
                    <fullName>NG5_ZAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Pricing</fullName>
                </value>
                <value>
                    <fullName>Old Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sellable_Item_Product__c</fullName>
        <label>Sellable Item - Product</label>
        <referenceTo>Sellable_Item_Product__c</referenceTo>
        <relationshipLabel>Sellable Item Pricings</relationshipLabel>
        <relationshipName>Selleable_Item_Pricings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Updated_Price__c</fullName>
        <label>Updated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Sellable Item Pricing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Conversion_Rate_Used__c</columns>
        <columns>Currency_Configuration__c</columns>
        <columns>Current_Price__c</columns>
        <columns>Multiplier_Used__c</columns>
        <columns>Previous_Price__c</columns>
        <columns>Price__c</columns>
        <columns>Price_Book__c</columns>
        <columns>Pricing_Type__c</columns>
        <columns>Sellable_Item_Product__c</columns>
        <columns>Updated_Price__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pricing_Type__c</field>
            <operation>contains</operation>
            <value>pricebook</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>APNNumber__c</columns>
        <columns>Currency_Configuration__c</columns>
        <columns>Sellable_Item_Product__c</columns>
        <columns>NAME</columns>
        <columns>Price__c</columns>
        <columns>Updated_Price__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Conversion_Rate_Used__c</columns>
        <columns>Multiplier_Used__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Currency/Region</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sellable Item Pricings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>